# ChangeLog for sci-libs/udunits
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/udunits/ChangeLog,v 1.24 2012/10/07 09:10:51 pacho Exp $

  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, #24135.

  03 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> -udunits-2.1.21.ebuild,
  -udunits-2.1.23.ebuild, metadata.xml, udunits-2.1.24.ebuild:
  keyword amd64-linux x86-linux

  28 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> udunits-2.1.21.ebuild:
  x86 stable wrt bug #391605

  26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> udunits-2.1.21.ebuild:
  Stable on amd64 wrt bug #391605

  23 Nov 2011; Justin Lecher <jlec@gentoo.org> +udunits-2.1.21.ebuild:
  Restore udunits-2.1.21.ebuild

*udunits-2.1.24 (23 Nov 2011)

  23 Nov 2011; Justin Lecher <jlec@gentoo.org> udunits-2.1.15.ebuild,
  -udunits-2.1.21.ebuild, udunits-2.1.23.ebuild, +udunits-2.1.24.ebuild,
  metadata.xml:
  Resorted ebuild, version Bump

*udunits-2.1.23 (29 Jul 2011)

  29 Jul 2011; Sébastien Fabbro <bicatali@gentoo.org> +udunits-2.1.23.ebuild:
  Version bump

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> udunits-2.1.15.ebuild,
  udunits-2.1.21.ebuild:
  Add dependency on virtual/fortran

  21 Jun 2011; Justin Lecher <jlec@gentoo.org> udunits-2.1.15.ebuild,
  udunits-2.1.21.ebuild:
  Added fortran-2.eclass support

  17 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> udunits-2.1.15.ebuild:
  ppc stable wrt #326431

*udunits-2.1.21 (08 Mar 2011)

  08 Mar 2011; Sébastien Fabbro <bicatali@gentoo.org> +udunits-2.1.21.ebuild:
  Version bump

  01 Dec 2010; Sébastien Fabbro <bicatali@gentoo.org> -udunits-1.12.1.ebuild,
  -udunits-1.12.11.ebuild, -files/udunits-1.12.11-fixingtests.patch,
  -udunits-2.1.11-r1.ebuild, -files/udunits-2.1.11-autotools.patch,
  -files/udunits_configure_in.patch, -files/udunits_customize.patch,
  -files/udunits_lib_make.patch, -files/udunits_master_mk.patch: