@@ -4,14 +4,15 @@ Hash: SHA256
 AUX udunits-2.1.15-autotools.patch 1850 SHA256 c4ea7d50d51cfc19be9719cd62d153f74d29c565e17fd969dc69a64096599972 SHA512 bd4371d0ac9c54d2d4e8a3a0e908b38350bcb729c364de6da93da2fa580abd0f7e48cb3b902a67a9ab84fcff043dad554529cbfb5b26f48eb1f8ba87c43236db WHIRLPOOL 5f110e85ea7433087e546e65dec1ab98748945bbb94191b5e7cff447aa807541a6caf7aa180409b6898c6682a00df46cfb581af210d4d9af70c697bbfb4153fe
 DIST udunits-2.1.15.tar.gz 1056530 SHA256 9f89196c3ffa5a4edebb944e17b38c7b20dc16b546311ea54272494b3c4b036d
 DIST udunits-2.1.24.tar.gz 1059344 SHA256 2e5fa4583031b26404a68167b38a11773872486f3c342fdde1e48c52a86e0ed0 SHA512 71af2aa62300dd6a2c58318d75cb9182433a208e28446725334a3a80195ebdae77aebe66e6c4e12b53b675501cf3295de2960d1e8beb1496a547d4eed0cde98e WHIRLPOOL 3c0bf81216553c00d1d37c6f5542496385d9b3cde2b14683e0fe6aaf85f62b50f49923e2239f2616635a53a7c4df9070db1001c7261b00cd51751a99c8870104
-EBUILD udunits-2.1.15.ebuild 1047 SHA256 248eac85dfda6991930103cf8dee3e8532564625a391c33420247adc236ab6e0 SHA512 48add8883ff7f5f5b46ba45bc69847374e65486b67e64133d237daa659e2470b4838875894908026fd86ea420cd06f1f30c5a6e768606db1a119b1e0f535c97b WHIRLPOOL fc2c8319ac7d0e271ded3825135c045d58a668312c0bed312a1bb9808ab525acc0883092f149d32426f5ebae0cf21519efe33f6c6e366e236e1f396d50b6d892
-EBUILD udunits-2.1.24.ebuild 1159 SHA256 51211b9e59d628c446c73d13534fe4a2efcc658a703b8ccaa0e73c9a90678d71 SHA512 29893e089801b4c0d76acedf8b4bec5bc56fa5223c353641f064a66bfa1c2607c29fb1b6c79c893530d5fd0ac1ab0d3cdf227031e84cf4ff874952897063ea1c WHIRLPOOL b7b603f4263b5e6b276ea1fa4586d2f5f1714137436a73e6446b72c77b00583c4be4177c230ac70ff6d7ac76c982ef48f6d15fd2d3fb3775e31b05e213e1bc08
-MISC ChangeLog 5678 SHA256 58c0569cd657e260e7d858d159046d77c8f99126e5a64fca9aeb7354358d93c9 SHA512 78d34ad9e0f4905494ba2e545fd6739be0931dcaee12d84274b9af83383d64970722481466567d1e82d1d78948775200016b49f9240080f9647d75d54069c0d6 WHIRLPOOL 9204fecadaf1f0ee42f801d0a61f1e2b0f6c6a3552717e68ac84d88a015262802e087b2f622d9e538889f33ba96f597472d73e8dc7f5beb2cd486f7e60f97a6d
-MISC metadata.xml 436 SHA256 c1114d9934e01d2fbab6eb243dbc962e505f9bb56b283ea3afbe023d63790643 SHA512 073f39aa7f14c029b4dfe3b06097d4ad2e6f4382a5c088cff816d64c712a5d3d05cb14950177d8cd7c784abc5f412315e7868237d75db167c58a2dad377a819a WHIRLPOOL d704b61ea25651ed98df3eb94b48b633f83737f49bc03ada51a1e4420737a6be4886a85d546e6c1b72baf222f96ea6610681fb525f81aaa1f2f241941b610fe2
+EBUILD udunits-2.1.15.ebuild 1028 SHA256 32fb4e37d18a4eec866419ed80cf1bfaa4ee485a178471fbdd97b01524d9bb28 SHA512 959a5259436a3b988d6adbccf0d41a3195e46dfc877c421e086546640b8e7473790d78621e0e6ffa9c1943c2d4798ea6f7857b614cfac2462e2721f109e832b8 WHIRLPOOL a4fad1c87015f7c9be3da24f1a4697455d7f21527b2ebff4987b31f6d43553dd3894f8d3879579f11a3b784ebdf7e2b6b4b69771d74aea6dc3d4ff32364ca35b
+EBUILD udunits-2.1.24.ebuild 1136 SHA256 be60514a817f4d68802c7ed7406f0c25e80c3e3b310fe967271805d595ccfe13 SHA512 cf30acd6c0637510f03ec825a6d3d95d76ea3c0deb8154d2e9aad728c33295f75f2e3d1539d94ddc42eb76e27e620ebd6531d2a5f8a044120e3fb202f7dc12fc WHIRLPOOL dc7d702eded9a07e5b2b5cf4bc80eec84e0b6c1dcdf486093af6baea1f94bcead50d82fb0df24220bd1978a50440b54e7fdca106390d94ce758f07a6409319fa
+MISC ChangeLog 5892 SHA256 e6aa744a9dc71d6cbff9aba65995f66963e1e94d0a4c5b2024246f8127e99352 SHA512 135c54f571cf65ca1b80c84833e1a9a5a7f2168cf6a94fe5de57bab5e0b6f27c644e978ead251f286e86acca7dfc44b09d2bfc741ac24307ed85ce319bc3dd8d WHIRLPOOL 1447358ee074d57ccb15eca7cba3c1c26dbd36a664049f4571a1a1b13ff27beab5b2b987bd31d116e5569b2ceb93c4779c9518e78b75a847141ba6c546def1cc
+MISC metadata.xml 438 SHA256 2a84031b2e98bac130d1e6973a14b5d4d0866ec5bdd26a078cbfb67e369c043e SHA512 71b53e0bd259f7561055abe3bd421f258fef1d7936a51be65efc72da966708dc6318e8cdd33ae901dc9d44765a9994fa0337564ff5230cb0fd29be59422e7f6c WHIRLPOOL a9ea956b8007228658d6be376aace7e946c6a4944c2f28121d5b67fc8f128f3d971a512fd0c78dab5edd0dc7461ac8d848b2da9c94102817c1a551288212746f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
 
-iEYEAREIAAYFAlBxRxwACgkQCaWpQKGI+9Qu7QCfSrQ0J6n+L2PrPg66aXBWHZG9
-JlAAn2picqGiCgq/UJIqYaJfwmgTSaT1
-=T/3Z
+iEYEAREIAAYFAlB9tsoACgkQgAnW8HDreRanHQCgoVe2/gRPTuY3aqjG+b0p2y4Q
+b/cAoMsGNJyk95a9VuaPHwdFb+zEhwwv
+=Mdqe
 -----END PGP SIGNATURE-----
