@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci</herd>
-<longdescription>
+	<herd>sci</herd>
+	<longdescription>
   This is the Unidata Units library, which supports conversion of unit
   specifications between formatted and binary forms, arithmetic
   manipulation of unit specifications, and conversion of values between
