@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/udunits/udunits-2.1.15.ebuild,v 1.8 2011/11/23 10:05:04 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/udunits/udunits-2.1.15.ebuild,v 1.9 2012/10/16 19:34:33 jlec Exp $
 
 EAPI=2
 
@@ -15,9 +15,7 @@ LICENSE="UCAR-Unidata"
 IUSE="doc"
 KEYWORDS="alpha amd64 ~hppa ~mips ppc ~sparc x86"
 
-RDEPEND="
-	virtual/fortran
-	dev-libs/expat"
+RDEPEND="dev-libs/expat"
 DEPEND="${RDEPEND}"
 
 src_prepare() {
