@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/udunits
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/udunits/ChangeLog,v 1.24 2012/10/07 09:10:51 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/udunits/ChangeLog,v 1.25 2012/10/16 19:34:33 jlec Exp $
+
+  16 Oct 2012; Justin Lecher <jlec@gentoo.org> udunits-2.1.15.ebuild,
+  udunits-2.1.24.ebuild, metadata.xml:
+  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
+  updated fortran-2.eclass
 
   07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, #24135.
